# RoboDesk-complete-RAG-Pipeline-

./: README.md  ingest.py  pyproject.toml  test_retrieval.py
app/: main.py
app/api/: routes.py
app/ingestion/: embedder.py  indexer.py  loader.py
app/rag/: chain.py  prompt.py
app/retrieval/: retriever.py
dataset/faq/: axiom_faq.txt
dataset/policies/: warranty_and_support_policy.txt
dataset/products/: robot_catalog.txt
dataset/support/: troubleshooting_guide.txt
